# multi-camera-tracking

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Saetta.urdf  cmake_install.cmake  manifest.xml  rvizconf.vcg
launch/: 0cam.launch  urdf.launch  usb_cam0.launch
msg/: Stringts.msg
msg_gen/cpp/include/tutorialROSOpenCV/: Stringts.h
msg_gen/lisp/: Stringts.lisp  _package.lisp  _package_Stringts.lisp  tutorialROSOpenCV-msg.asd
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: Default.properties  private.xml
src/: clock.cpp  list_fusioner.cpp
src/cvblobs8.3_linux/testBlobs/: a.out
src/old/: main.cpp
src/old_publisher/: image_pub.cpp  image_pub_labrob14.cpp  image_pub_sciame.cpp
src/track/msg/: _Stringts.py  __init__.py
src/tutorialROSOpenCV/msg/: _Stringts.py
src/v2nodes/: cam1_labrob14_pub.cpp  cam2_labrob14_pub.cpp  map_1280_1024.cpp  map_1280_1024.h  map_640_480.cpp  map_640_480.h  sciame_pub.cpp
